--- a/stand/efi/Makefile
+++ b/stand/efi/Makefile
@@ -7,6 +7,7 @@ SUBDIR.${MK_LOADER_IA32}+=	libefi32
 SUBDIR.${MK_FDT}+=	fdt
 SUBDIR.yes+=	libacpi
 SUBDIR.${MK_LOADER_IA32}+=	libacpi32
+SUBDIR.yes+= ../liblua
 SUBDIR.yes+=	.WAIT
 
 SUBDIR.yes+=	boot1 gptboot
