fixing universe build

--- a/stand/liblua/Makefile
+++ b/stand/liblua/Makefile
@@ -30,7 +30,7 @@ SRCS+=	lfs.c
 SRCS+=	lhash.c
 
 # ACPI
-.if ${MACHINE_CPUARCH} == "amd64" && ${DO32:U0} == 0
+.if ${MACHINE} == "amd64" && ${DO32:U0} == 0
 .PATH: ${LIBLUASRC}/acpi
 
 SRCS+=  lacpi.c lacpi_object.c lacpi_utils.c lacpi_walk.c lacpi_data.c
@@ -39,8 +39,8 @@ CFLAGS+= -I${SYSDIR}/contrib/dev/acpica/include \
 	 -I${EFISRC}/libacpi/acpi/include -I${EFISRC}/include \
 	 -I${EFISRC}/include/amd64 -I${LIBLUASRC}/acpi/include
 
-DPADD+=	${LIBACPI}
-LDADD+= ${LIBACPI}
+#DPADD+= ${LIBACPI}
+#LDADD+= ${LIBACPI}
 .endif
 
 WARNS?=	3
