--- a/stand/kboot/kboot/Makefile
+++ b/stand/kboot/kboot/Makefile
@@ -9,6 +9,7 @@ LOADER_NFS_SUPPORT?=	no
 LOADER_TFTP_SUPPORT?=	no
 LOADER_GZIP_SUPPORT?=	no
 LOADER_BZIP2_SUPPORT?=	no
+LOADER_ACPI_SUPPORT?=	no
 
 .include <bsd.init.mk>
 
