--- a/stand/liblua/Makefile
+++ b/stand/liblua/Makefile
@@ -30,7 +30,7 @@ SRCS+=	lfs.c
 SRCS+=	lhash.c
 
 # ACPI
-.if ${MACHINE} == "amd64" && ${DO32:U0} == 0
+.if ${MACHINE_CPUARCH} == "amd64" && ${DO32:U0} == 0 && ${LOADER_ACPI_SUPPORT:Uno} == "yes"
 .PATH: ${LIBLUASRC}/acpi
 
 SRCS+=  lacpi.c lacpi_object.c lacpi_utils.c lacpi_walk.c lacpi_data.c
@@ -39,6 +39,7 @@ CFLAGS+= -I${SYSDIR}/contrib/dev/acpica/include \
 	 -I${EFISRC}/libacpi/acpi/include -I${EFISRC}/include \
 	 -I${EFISRC}/include/amd64 -I${LIBLUASRC}/acpi/include
 
+CFLAGS+= -DLOADER_ACPI_SUPPORT
 #DPADD+= ${LIBACPI}
 #LDADD+= ${LIBACPI}
 .endif
